<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstrainToBarrierActivity">

    <TextView
        android:id="@+id/textViewAdjustConstraintToBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_view_adjust_constraint_to_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConstraintBarrierC"
        android:layout_width="112dp"
        android:layout_height="107dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/button_constraint_to_barrier_c"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdjustConstraintToBarrier" />

    <Button
        android:id="@+id/buttonConstraintBarrierB"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_constraint_to_barrier_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConstraintBarrierA" />

    <Button
        android:id="@+id/buttonConstraintBarrierA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/button_constraint_to_barrier_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdjustConstraintToBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="buttonConstraintBarrierB,buttonConstraintBarrierA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>